force-app/main/default/objects/Ball__c/Ball__c.object-meta.xml
<CustomObject>
    <label>Ball</label>
    <nameField>
        <displayFormat>BALL-{000000000}</displayFormat>
        <label>Ball Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>