force-app/main/default/objects/Ball__c/fields/BallNumber__c.field-meta.xml
<CustomField>
    <fullName>BallNumber__c</fullName>
    <label>Ball Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>