force-app/main/default/objects/Ball__c/fields/BallTitle__c.field-meta.xml
<CustomField>
    <fullName>BallTitle__c</fullName>
    <formula>TEXT( Over__r.OverNumber__c - 1 ) + &apos;.&apos; +  TEXT( BallNumber__c )</formula>
    <label>Ball Title</label>
    <type>Text</type>
</CustomField>