force-app/main/default/objects/Ball__c/fields/BallType__c.field-meta.xml
<CustomField>
    <fullName>BallType__c</fullName>
    <label>Ball Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Wide</fullName>
            </value>
            <value>
                <fullName>No Ball</fullName>
            </value>
            <value>
                <fullName>Wicket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>