force-app/main/default/objects/Ball__c/fields/BowledBy__c.field-meta.xml
<CustomField>
    <fullName>BowledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bowled By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Balls</relationshipLabel>
    <relationshipName>Balls</relationshipName>
    <type>Lookup</type>
</CustomField>