force-app/main/default/objects/Ball__c/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <label>Over</label>
    <referenceTo>Over__c</referenceTo>
    <relationshipLabel>Balls</relationshipLabel>
    <relationshipName>Balls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>