force-app/main/default/objects/Ball__c/fields/PlayedBy__c.field-meta.xml
<CustomField>
    <fullName>PlayedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Played By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Balls (Played By)</relationshipLabel>
    <relationshipName>Balls1</relationshipName>
    <type>Lookup</type>
</CustomField>