force-app/main/default/objects/Ball__c/fields/RunsScored__c.field-meta.xml
<CustomField>
    <fullName>RunsScored__c</fullName>
    <label>Runs Scored</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>