force-app/main/default/objects/Ball__c/fields/Wicket__c.field-meta.xml
<CustomField>
    <fullName>Wicket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wicket</label>
    <referenceTo>Wicket__c</referenceTo>
    <relationshipLabel>Balls</relationshipLabel>
    <relationshipName>Balls</relationshipName>
    <type>Lookup</type>
</CustomField>