force-app/main/default/objects/Ball__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Over__c</columns>
    <columns>BallNumber__c</columns>
    <columns>BallTitle__c</columns>
    <columns>BallType__c</columns>
    <columns>BowledBy__c</columns>
    <columns>PlayedBy__c</columns>
    <columns>RunsScored__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>